shared layer completed

--- a/train-generalized-attention.ipynb
+++ b/train-generalized-attention.ipynb
@@ -67792,7 +67792,7 @@
     "\n",
     "        train_loader, validation_loader, all_train_loader, test_loader, input_shape, input_shape_test, output_shape, output_shape_test =  prepare_data_loader(\n",
     "                                                                                        window_size,BATCH_SIZE, prediction_horizon,\n",
-    "                                                                                        model_type, split_ratio = 0.7, df = None, df_test = None, output_folder_train=output_folder_train, shuffle = True)\n",
+    "                                                                                        model_type, split_ratio = 0.7, df = None, df_test = None, output_folder_train=output_folder_train, shuffle = True, patient_no = 12)\n",
     "        \n",
     "        # model = SharedLayerModel(input_shape =input_shape , output_shape=output_shape) \n",
     "        # model = model.to(device)\n",
@@ -67882,26 +67882,6 @@
     "\n",
     "    abs_patients_errors_PHs[prediction_horizon] = multiple_runs_each_patient_mae\n",
     "    squared_patients_errors_PHs[prediction_horizon] = multiple_runs_each_patient_rmse"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 91,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(12, 13600, 1)"
-      ]
-     },
-     "execution_count": 91,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "input_shape"
    ]
   },
   {
